--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -9,15 +9,19 @@
     {% endif %}
 
     <form action="{{ path('app_login') }}" method="post">
-        <label for="email">user</label>
-        <input type="text" id="email" name="_username" value="{{ last_username }}">
+        <label for="username">User</label>
+        <input type="text" id="username" name="_username" value="{{ last_username }}">
 
-        <label for="password">password</label>
+        <label for="password">Password</label>
         <input type="password" id="password" name="_password">
 
-        {# If you want to control the URL the user is redirected to on success   #}
-        <input type="hidden" name="_target_path" value="/categories">  
+        {# If you want to control the URL the user is redirected to on success #}
+        <input type="hidden" name="_target_path" value="/texts">
 
-        <button type="submit">login</button>
+        <button type="submit">Login</button>
     </form>
+
+   
+
+   
 {% endblock %}
