Symfony primer commit

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Aplicación de pedidos{% endblock %}</title>
+        <title>{% block title %}Red social de escritores y lectores {% endblock %}</title>
     </head>
     <body>
 		{% block body %}
